# plugin-sdk

./: CMakeLists.txt
plugin_III/: CMakeLists.txt
plugin_III/game_III/: CPed.h
plugin_III/game_III/rw/: rwplcore.h
plugin_sa/: CMakeLists.txt
plugin_sa/game_sa/: CTaskSimpleJetPack.cpp
plugin_sa/game_sa/rw/: skeleton.h
plugin_vc/: CMakeLists.txt
plugin_vc/game_vc/rw/: rwplcore.h  skeleton.h
shared/: DynAddress.cpp  Other.cpp  Other.h  StringUtils.cpp
shared/game/: CRGBA.cpp  CRGBA.h  CompressedVector.cpp  CompressedVector2D.cpp
